# MyBudget

./: .dockerignore  .dummy_feature  .dummy_feature2  .force_release  .gitignore  .release_trigger  Dockerfile  README.md  RELEASE.md  docker-compose.yml  main.py  pyproject.toml  release-config.json  release.toml  requirements.txt  run_ui.py
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
app/: config.py  utils.py
app/models/: database.py  schemas.py
app/routers/: __init__.py  account_types.py  accounts.py  bills.py  budgets.py  categories.py  documentation.py  income.py  settings.py  settings_old.py  transactions.py
app/ui/: global_dialogs.py  niceui.py  utils.py
app/ui/modules/: __init__.py  accounts.py  bills.py  budgets.py  dashboard.py  reports.py  settings.py  transactions.py
documentation/: DEVELOPER.md  USER.md
scripts/: README.md  __init__.py  bootstrap.py  load_sample_data.py  setup.sh  setup_and_load.sh
tests/: conftest.py  test_account_types.py  test_accounts.py  test_bills.py  test_budgets.py  test_categories.py  test_edge_cases.py  test_income.py  test_settings.py  test_syntax.py  test_transactions.py
