[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mybudget"
version = "1.0.0"
description = "A simple personal finance management application"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

[tool.setuptools]
packages = ["app"]
